--- a/index.html
+++ b/index.html
@@ -5,22 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href=assets\css\reset.css rel="stylesheet">
-    <link href=assets\css\style.css rel="stylesheet">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel ="stylesheet" href=assets\css\override.css>
     <title>About Me</title>
 </head>
 <body>
-        <header style="margin-bottom: 45px">
+        <nav class="navbar navbar-expand-lg-md navbar-light bg-dark">
+
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+                <div class="collapse navbar-collapse" id="collapse_target">
+                <a class="navbar-brand"><img src="#"></a>
+                  <ul class="navbar-nav">
+                    <li><a class="nav-link" href=index.html>About <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li><a class="nav-item nav-link" href=contact.html>Contact</a>
+                    </li>
+                    <li><a class="nav-item nav-link" href=portfolio.html>Portfolio</a>
+                    </li>
+                </ul>
+                </div>
+              </nav>
+        <header>
         Elliott Sherwood
         </header>
         <!--end of top section-->
-    <section>
-            <a class="buttons" href=index.html>About</a>
-            <a class="buttons" id="borderCollie" href=contact.html>Contact</a>
-            <a class="buttons" id="borderCollie" href=portfolio.html>Portfolio</a>
-    <aside> <!--doesn't line up as a div for some reason-->
+
+    <aside>
         <h2>About Me</h2>
             <hr>
-        <img id=self alt="self-picture" src=assets\images\photo.jpg>
+        <img class="img-fluid" alt="self-picture" src=assets\images\photo.jpg>
         <p>Well met, my name is Elliott Sherwood. I'm currently a student in the KU Coding Bootcamp. I plan to gain the coding knowledge and skills needed to become a web developer.</p>
         <p>My dream is to become a video game developer and produce quality games that are entertaining and engaging.</p>
     </aside>
