added working bootstrap elements

--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href=assets\css\reset.css rel="stylesheet">
-    <link href=assets\css\style.css rel="stylesheet">
+    <!-- <link href=assets\css\style.css rel="stylesheet"> -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href=assets\css\override.css rel="stylesheet">
     <title>Contact Me</title>
 </head>
 <body>
-    <header style="margin-bottom: 45px">
-        Elliott Sherwood
-    </header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav">
+                        <li class="nav-item active">
+                                <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
+                            </li> 
+                    <li class="nav-item">
+                      <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="index.html">About</a>
+                    </li>
+                    
+                  </ul>
+                </div>
+              </nav>
+              <div class="jumbotron jumbotron-fluid header">
+                    <div class="container">
+                      <h1 class="display-6">Elliott Sherwood</h1>
+                    </div>
+                  </div>
 
     <div>
         <h2>Contact Me</h2>
@@ -33,9 +59,12 @@
       </div>
     </form>
     <hr id=space   style=margin-left:50px>
-    <footer style=margin-left:50px>
-        Copyright info
-    </footer>
+    <ul class="nav position-bottom bg-dark nav-light">
+        </li>
+        <li class="nav-item">
+          <p class="nav-link disabled">Copyright Info</p>
+        </li>
+      </ul>
     
 </body>
 </html>
