--- a/index.html
+++ b/index.html
@@ -5,47 +5,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href=assets\css\reset.css rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel ="stylesheet" href=assets\css\override.css>
     <title>About Me</title>
 </head>
 <body>
-        <nav class="navbar navbar-expand-lg-md navbar-light bg-dark">
-
-            <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-                <div class="collapse navbar-collapse" id="collapse_target">
-                <a class="navbar-brand"><img src="#"></a>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
-                    <li><a class="nav-link" href=index.html>About <span class="sr-only">(current)</span></a>
+                    <li class="nav-item active">
+                      <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
                     </li>
-                    <li><a class="nav-item nav-link" href=contact.html>Contact</a>
+                    <li class="nav-item">
+                      <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
-                    <li><a class="nav-item nav-link" href=portfolio.html>Portfolio</a>
+                    <li class="nav-item">
+                      <a class="nav-link" href="contact.html">Contact</a>
                     </li>
-                </ul>
+                    
+                  </ul>
                 </div>
               </nav>
-        <header>
-        Elliott Sherwood
-        </header>
+              <div class="jumbotron jumbotron-fluid header">
+                    <div class="container">
+                      <h1 class="display-6">Elliott Sherwood</h1>
+                    </div>
+                  </div>
         <!--end of top section-->
-
-    <aside>
-        <h2>About Me</h2>
-            <hr>
-        <img class="img-fluid" alt="self-picture" src=assets\images\photo.jpg>
-        <p>Well met, my name is Elliott Sherwood. I'm currently a student in the KU Coding Bootcamp. I plan to gain the coding knowledge and skills needed to become a web developer.</p>
-        <p>My dream is to become a video game developer and produce quality games that are entertaining and engaging.</p>
-    </aside>
-    <!--no scroll bar (woot)-->
+        <div class="card-header">
+                About Me
+              </div>
+        <div class="row">
+                <div class="col-sm-6">
+                  <div class="card">
+                    <div class="card-body">
+                    <img class="card-img-fluid" alt="self-picture" src=assets\images\photo.jpg style="width: 180px; height:280px">
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-6">
+                  <div class="card">
+                    <div class="card-body">
+                      <p class="card-text">Well met, my name is Elliott Sherwood. I'm currently a student in the KU Coding Bootcamp. I plan to gain the coding knowledge and skills needed to become a web developer.</p>
+                      <p>My dream is to become a video game developer and produce quality games that are entertaining and engaging.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
             <hr id=space>
-        <footer>
-            Copyright info
-        </footer>
+            <ul class="nav position-bottom bg-dark nav-light">
+                    </li>
+                    <li class="nav-item">
+                      <p class="nav-link disabled">Copyright Info</p>
+                    </li>
+                  </ul>
 
 </body>
 </html>
