styling and spacing

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=d30ice-width, 325tial-scale=250">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href=assets\css\reset.css rel="stylesheet">
     <!-- <link href=assets\css\style.css rel="stylesheet"> -->
@@ -10,6 +10,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
     <link href=assets\css\override.css rel="stylesheet">
     <title>My Portfolio</title>
 </head>
@@ -33,47 +34,47 @@
                   </ul>
                 </div>
               </nav>
-              <div class="jumbotron jumbotron-fluid header">
+              <div class="jumbotron jumbotron-fluid header" style="height:200px">
                     <div class="container">
                       <h1 class="display-6">Elliott Sherwood</h1>
                     </div>
                   </div>
 
 <div>
-<h2>Portfolio</h2>
+<h2 style="margin-left:30px">Portfolio</h2>
     <hr>
     <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-5">
               <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Space-Cat Scratch Game</h5>
-                  <img src=assets\images\SpaceCat-Scratch.PNG style="width: 250px; height:200px">
+                <div class="card-body" style="margin-left:30px">
+                  <img class="container" src=assets\images\SpaceCat-Scratch.PNG style="width: 300px; height:250px">
+                  <p class="centered" style="margin-left:30px">Space-Cat Scratch Game</p>
                 </div>
               </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-5">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">Nekrgoblikon Fanpage HTML</h5>
-                  <img src=assets\images\NekrogoblikonFanpage.PNG style="width: 250px; height:200px">
+                  <img class="container" src=assets\images\NekrogoblikonFanpage.PNG style="width: 300px; height:250px">
+                <p class="centered">Nekrogoblikon FanPage - HTML</p>
                 </div>
               </div>
             </div>
           </div>
           <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-5">
                   <div class="card">
-                    <div class="card-body">
-                      <h5 class="card-title">Project Vulcan - RPGMakerVXAce</h5>
-                      <img src=assets\images\ProjectVulcan.PNG style="width: 250px; height:200px">  
+                    <div class="card-body" style="margin-left:30px">
+                      <img class="container" src=assets\images\ProjectVulcan.PNG style="width: 300px; height:250px">  
+                    <p class="centered" style="margin-left:30px">Project Vulcan - RPGMakerVXAce</p>
                     </div>
                   </div>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-5">
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title">Placeholder Project Example</h5>
-                      <img src=assets\images\shrug.jpg style="width: 250px; height:200px">
+                      <img class="container" src=assets\images\shrug.jpg style="width: 300px; height:250px">
+                      <p class="centered">PlaceHolder Project Example</p>
                     </div>
                   </div>
                 </div>
