--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
     <link href=assets\css\override.css rel="stylesheet">
     <title>Contact Me</title>
 </head>
@@ -33,32 +34,41 @@
                   </ul>
                 </div>
               </nav>
-              <div class="jumbotron jumbotron-fluid header">
+              <div class="jumbotron jumbotron-fluid header" style="height:200px">
                     <div class="container">
                       <h1 class="display-6">Elliott Sherwood</h1>
                     </div>
                   </div>
 
     <div>
-        <h2>Contact Me</h2>
+        <h2 style="margin-left:30px">Contact Me</h2>
         <hr>
-        <form>
-      
-          <ul><label for="fname">First Name</label>
-          <input type="text" name="firstname"></ul>
-          <br>
-          <ul><label for="lname">Last Name</label>
-          <input type="text" name="lastname"></ul>
-          <br>
-          <ul><label for="subject">Subject</label>
-          <textarea id="subject" name="subject" style=width:250px></textarea></ul>
-          <button type=submit>Submit</button>
+        <form style="margin-left:30px">
+
+                <ul>
+                    First Name:
+                    <br>
+                    <input class=namebox type="text" name="firstname">
+                </ul>
+                <br>
+                <ul>
+                    Last Name:
+                    <br>
+                    <input class=namebox type="text" name="lastname">
+                </ul>
+                <br>
+                <ul>
+                    Subject:
+                    <br>
+                    <textarea id="subject" name="subject"></textarea>
+                </ul>
+                <button style="margin-bottom: 20px; margin-right:auto; margin-left:auto; padding:5px" type=submit>Submit</button>
       <!--submit button doesn't function. javascript needed?-->
         </form>
-        <!--no scroll bar either (woot again)-->
+
       </div>
     </form>
-    <hr id=space   style=margin-left:50px>
+    <hr id=space>
     <ul class="nav position-bottom bg-dark nav-light">
         </li>
         <li class="nav-item">
