--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel ="stylesheet" href=assets\css\override.css>
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
     <title>About Me</title>
 </head>
 <body>
@@ -32,28 +33,28 @@
                   </ul>
                 </div>
               </nav>
-              <div class="jumbotron jumbotron-fluid header">
+              <div class="jumbotron jumbotron-fluid header" style="height:200px">
                     <div class="container">
                       <h1 class="display-6">Elliott Sherwood</h1>
                     </div>
                   </div>
         <!--end of top section-->
-        <div class="card-header">
-                About Me
-              </div>
+    <div>
+                <h2 style="margin-left:30px">About Me</h2>
+
         <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-4" style="margin-left:25px">
                   <div class="card">
                     <div class="card-body">
                     <img class="card-img-fluid" alt="self-picture" src=assets\images\photo.jpg style="width: 180px; height:280px">
                     </div>
                   </div>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-5">
                   <div class="card">
                     <div class="card-body">
-                      <p class="card-text">Well met, my name is Elliott Sherwood. I'm currently a student in the KU Coding Bootcamp. I plan to gain the coding knowledge and skills needed to become a web developer.</p>
-                      <p>My dream is to become a video game developer and produce quality games that are entertaining and engaging.</p>
+                      <p class="card-text" style="font-size: 25px">Well met, my name is Elliott Sherwood. I'm currently a student in the KU Coding Bootcamp. I plan to gain the coding knowledge and skills needed to become a web developer.</p>
+                      <p style="font-size: 25px">My dream is to become a video game developer and produce quality games that are entertaining and engaging.</p>
                     </div>
                   </div>
                 </div>
@@ -65,6 +66,6 @@
                       <p class="nav-link disabled">Copyright Info</p>
                     </li>
                   </ul>
-
+    </div>
 </body>
 </html>
