updated portfolio page, adjusted some spacing elements

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 </head>
 <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -73,8 +73,8 @@
                 <div class="col-sm-5">
                   <div class="card">
                     <div class="card-body">
-                      <img class="container" src=assets\images\shrug.jpg style="width: 300px; height:250px">
-                      <p class="centered">PlaceHolder Project Example</p>
+                      <img class="container" src="assets\images\Screenshot (2).png" style="width: 300px; height:250px">
+                      <p class="centered">Psychic Game - Javascript</p>
                     </div>
                   </div>
                 </div>
