added mage fight game, fixed image names

--- a/portfolio.html
+++ b/portfolio.html
@@ -73,8 +73,16 @@
                 <div class="col-sm-5">
                   <div class="card">
                     <div class="card-body">
-                      <img class="container" src="assets\images\Screenshot (2).png" style="width: 300px; height:250px">
+                      <img class="container" src="assets\images\Screenshot(2).png" style="width: 300px; height:250px">
                       <p class="centered">Psychic Game - Javascript</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-5">
+                  <div class="card">
+                    <div class="card-body">
+                      <img class="container" src="assets\images\Screenshot(5).png" style="width: 300px; height:250px">
+                      <p class="centered">Mage Fight - JS/JQuery</p>
                     </div>
                   </div>
                 </div>
