--- a/portfolio.html
+++ b/portfolio.html
@@ -81,8 +81,8 @@
                 <div class="col-sm-5">
                   <div class="card">
                     <div class="card-body">
-                      <img class="container" src="assets\images\Screenshot(5).png" style="width: 300px; height:250px">
-                      <p class="centered">Mage Fight - JS/JQuery</p>
+                      <a href="https://e-sherwood.github.io/unit-4-game/"><img class="container" src="assets\images\Screenshot(5).png" style="width: 300px; height:250px"></a>
+                      <p class="centered">Mage Fight - JS/JQuery (WIP)</p>
                     </div>
                   </div>
                 </div>
