--- a/portfolio.html
+++ b/portfolio.html
@@ -1,102 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=d30ice-width, 325tial-scale=250">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href=assets\css\reset.css rel="stylesheet">
-    <!-- <link href=assets\css\style.css rel="stylesheet"> -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
-    <link href=assets\css\override.css rel="stylesheet">
-    <title>My Portfolio</title>
-</head>
-<body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="#"></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
-                    </li>  
-                    <li><a class="nav-link" href="index.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                    
-                  </ul>
-                </div>
-              </nav>
-              <div class="jumbotron jumbotron-fluid header" style="height:200px">
-                    <div class="container">
-                      <h1 class="display-6">Elliott Sherwood</h1>
-                    </div>
-                  </div>
 
-<div>
-<h2 style="margin-left:30px">Portfolio</h2>
-    <hr>
-    <div class="row">
-            <div class="col-sm-5">
-              <div class="card">
-                <div class="card-body" style="margin-left:30px">
-                  <img class="container" src=assets\images\SpaceCat-Scratch.PNG style="width: 300px; height:250px">
-                  <p class="centered" style="margin-left:30px">Space-Cat Scratch Game</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-5">
-              <div class="card">
-                <div class="card-body">
-                  <img class="container" src=assets\images\NekrogoblikonFanpage.PNG style="width: 300px; height:250px">
-                <p class="centered">Nekrogoblikon FanPage - HTML</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-                <div class="col-sm-5">
-                  <div class="card">
-                    <div class="card-body" style="margin-left:30px">
-                      <img class="container" src=assets\images\ProjectVulcan.PNG style="width: 300px; height:250px">  
-                    <p class="centered" style="margin-left:30px">Project Vulcan - RPGMakerVXAce</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-5">
-                  <div class="card">
-                    <div class="card-body">
-                      <img class="container" src="assets\images\Screenshot(2).png" style="width: 300px; height:250px">
-                      <p class="centered">Psychic Game - Javascript</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-5">
-                  <div class="card">
-                    <div class="card-body">
-                      <a href="https://e-sherwood.github.io/unit-4-game/"><img class="container" src="assets\images\Screenshot(5).png" style="width: 300px; height:250px"></a>
-                      <p class="centered">Mage Fight - JS/JQuery (WIP)</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-    
-  
-    <hr id=space>
-    <ul class="nav position-bottom bg-dark nav-light">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=d30ice-width, 325tial-scale=250">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href=assets\css\reset.css rel="stylesheet">
+  <!-- <link href=assets\css\style.css rel="stylesheet"> -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+  <link href=assets\css\override.css rel="stylesheet">
+  <title>My Portfolio</title>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
+        </li>
+        <li><a class="nav-link" href="index.html">About</a>
         </li>
         <li class="nav-item">
-          <p class="nav-link disabled">Copyright Info</p>
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
-      </ul>
 
-</div>
+      </ul>
+    </div>
+  </nav>
+  <div class="jumbotron jumbotron-fluid header" style="height:200px">
+    <div class="container">
+      <h1 class="display-6">Elliott Sherwood</h1>
+    </div>
+  </div>
+
+  <div>
+    <h2 style="margin-left:30px">Portfolio</h2>
+    <hr>
+    <div class="row">
+      <div class="col-sm-5">
+        <div class="card">
+          <div class="card-body" style="margin-left:30px">
+            <a href="https://scratch.mit.edu/projects/230024674/#player"><img class="container" src=assets\images\SpaceCat-Scratch.PNG style="width: 300px; height:250px"></a>
+            <p class="centered" style="margin-left:30px">Space-Cat Scratch Game</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-5">
+        <div class="card">
+          <div class="card-body">
+            <img class="container" src=assets\images\NekrogoblikonFanpage.PNG style="width: 300px; height:250px">
+            <p class="centered">Nekrogoblikon FanPage - HTML</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-5">
+        <div class="card">
+          <div class="card-body" style="margin-left:30px">
+            <img class="container" src=assets\images\ProjectVulcan.PNG style="width: 300px; height:250px">
+            <p class="centered" style="margin-left:30px">Project Vulcan - RPGMakerVXAce</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-5">
+        <div class="card">
+          <div class="card-body">
+            <a href="https://e-sherwood.github.io/psychic-game/"><img class="container" src="assets\images\Screenshot(2).png"
+                style="width: 300px; height:250px"></a>
+            <p class="centered">Psychic Game - Javascript</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-5">
+        <div class="card">
+          <div class="card-body">
+            <a href="https://e-sherwood.github.io/unit-4-game/"><img class="container" src="assets\images\Screenshot(5).png"
+                style="width: 300px; height:250px"></a>
+            <p class="centered">Mage Fight - JS/JQuery (WIP)</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-5">
+        <div class="card">
+          <div class="card-body">
+            <a href="https://e-sherwood.github.io/TriviaGame/"><img class="container" src="assets\images\Screenshot(6).png" style="width: 300px; height:250px"></a>
+            <p class="centered">Trivia Game - JS/JQuery + Timer</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <hr id=space>
+    <ul class="nav position-bottom bg-dark nav-light">
+      </li>
+      <li class="nav-item">
+        <p class="nav-link disabled">Copyright Info</p>
+      </li>
+    </ul>
+
+  </div>
 </body>
+
 </html>
