added Trainz to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -83,15 +83,15 @@
             <a href="https://e-sherwood.github.io/psychic-game/"><img class="container" src="assets\images\Screenshot(2).png"
                 style="width: 300px; height:250px"></a>
             <p class="centered">Psychic Game - Javascript</p>
-          </div>
+            </div>
         </div>
       </div>
       <div class="col-sm-5">
         <div class="card">
-          <div class="card-body">
+          <div class="card-body" style="margin-left:30px">
             <a href="https://e-sherwood.github.io/unit-4-game/"><img class="container" src="assets\images\Screenshot(5).png"
                 style="width: 300px; height:250px"></a>
-            <p class="centered">Mage Fight - JS/JQuery (WIP)</p>
+            <p class="centered" style="margin-left:30px">Mage Fight - JS/JQuery (WIP)</p>
           </div>
         </div>
       </div>
@@ -113,7 +113,15 @@
       </div>
     </div>
   </div>
-
+  <div class="col-sm-5">
+    <div class="card">
+      <div class="card-body">
+        <a href="https://e-sherwood.github.io/Trainz/"><img class="container" src="assets/images/Screenshot(10).png" style="width: 300px; height:250px"></a>
+        <p class="centered">Trainz - Moment.js/Firebase (WIP)</p>
+      </div>
+    </div>
+  </div>
+</div>
 
     <hr id=space>
     <ul class="nav position-bottom bg-dark nav-light">
