--- a/portfolio.html
+++ b/portfolio.html
@@ -122,6 +122,15 @@
     </div>
   </div>
 </div>
+<div class="col-sm-5">
+  <div class="card">
+    <div class="card-body">
+      <a href="https://jlrt37.github.io/Group/"><img class="container" src="assets/images/Screenshot(12).png" style="width: 300px; height:250px"></a>
+      <p class="centered">Group Project 1 - "How Does That Song Go?"</p>
+    </div>
+  </div>
+</div>
+</div>
 
     <hr id=space>
     <ul class="nav position-bottom bg-dark nav-light">
